--------------------

.. contents::


IN DEVELOPMENT
--------------

  NOTES WHEN UPGRADING:

  CHANGES:

    * Broader support of GNU Emacs mail clients. Set
      ``mail_client=emacsclient`` in your bazaar.conf and ``send`` will pop the
      bundle in a mail buffer according to the value of ``mail-user-agent``
      variable. (Xavier Maillard)

  FEATURES:

  IMPROVEMENTS:

  BUGFIXES:

    * Avoid muttering every time a child update does not cause a progress bar
      update. (John Arbash Meinel, #213771)

    * Severe performance degradation in fetching from knit repositories to
      knits and packs due to parsing the entire revisions.kndx on every graph
      walk iteration fixed by using the Repository.get_graph API.  There was
      another regression in knit => knit fetching which re-read the index for
      every revision each side had in common.
      (Robert Collins, John Arbash Meinel)

  DOCUMENTATION:

    * Document outlining strategies for TortoiseBzr. (Mark Hammond)

  TESTING:

  INTERNALS:

    * Implement xml8 serializer.  (Aaron Bentley)

  API BREAKS:


bzr 1.4rc1 2008-04-11
---------------------

   * bzr main script cannot be imported (Benjamin Peterson)

   * On Linux bzr additionally looks for plugins in arch-independent site
     directory. (Toshio Kuratomi)

   * The ``set_rh`` branch hook is now deprecated. Please migrate
     any plugins using this hook to use an alternative, e.g.
     ``post_change_branch_tip``. (Ian Clatworthy)

   * When a plugin cannot be loaded as the file path is not a valid
     python module name bzr will now strip a ``bzr_`` prefix from the
     front of the suggested name, as many plugins (e.g. bzr-svn)
     want to be installed without this prefix. It is a common mistake
     to have a folder named "bzr-svn" for that plugin, especially
     as this is what bzr branch lp:bzr-svn will give you. (James Westby,
     Andrew Cowie)

   * UniqueIntegerBugTracker now appends bug-ids instead of joining